# core

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  dev-docker-compose.yaml  docker-compose.yaml  logging.conf  prod-docker-compose.yaml  pyproject.toml  requirements.txt
data_models/: constants.py  models.py
llm/: agents.py  config.py  vector_store.py
llm/memory/: slack_memory.py
llm/tools/confluence/: confluence_tool.py
llm/tools/database/: rag.py
llm/tools/deepl/: file_translation_tool.py
llm/tools/document/: document_vector_store_tool.py
llm/tools/git/: git_repo_tool.py
llm/tools/image/: image_generation_tool.py  image_operations_tool.py
llm/tools/webpage/: webpage_tool.py
llm/vectorstores/pgvector/: data_model.py  non_rbac.py  rbac.py
sql/: 1-create-db.sql  2-init-pgvector.sql
